<resources>
    <string name="app_name">CD Hunter</string>

    <!-- PLACEHOLDERS-->

    <string name="album_amount">34</string>
    <string name="user_name">User Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="album_name">Album Name</string>
    <string name="summary_text">Summary text</string>
    <string name="track_name">Track Name</string>
    <string name="track_duration">09:21</string>
    <string name="tag">Tag</string>
    <string name="image_description_artist">Artist photo</string>
    <string name="image_description_album">Album cover</string>

    <!-- BOTTOM NAVIGATION -->

    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_search">Search</string>
    <string name="bottom_nav_collection">Collection</string>
    <string name="bottom_nav_wishlist">Wishlist</string>

    <!-- PROGRESS -->

    <string name="progress_message">Loading …</string>

    <!-- AUTH METHOD PICKER -->

    <string name="auth_logo_description">App logo</string>

    <string name="greeting_text_first_line">Millions of albums.</string>
    <string name="greeting_text_second_line">Manage your collection.</string>

    <string name="auth_sign_up_btn">Sign up</string>
    <string name="auth_google_btn">Continue with Google</string>
    <string name="auth_login_btn">Log in</string>

    <!-- AUTH SIGN UP -->

    <string name="auth_sign_up_header">Create account</string>
    <string name="auth_sign_up_username_hint">Choose username</string>
    <string name="auth_sign_up_username_helper_text">This appears on your CD Hunter profile.</string>
    <string name="auth_sign_up_email_hint">What is your email?</string>
    <string name="auth_sign_up_email_helper_text">You\'ll need to confirm this email later.</string>
    <string name="auth_sign_up_password_hint">Create a password</string>
    <string name="auth_sign_up_password_helper_text">Use at least 8 characters.</string>
    <string name="auth_sign_up_submit_btn_text">Done</string>
    <string name="auth_sign_up_username_empty_error_msg">Username required.</string>
    <string name="auth_sign_up_email_empty_error_msg">Email required.</string>
    <string name="auth_sign_up_email_valid_error_msg">Enter a valid email.</string>
    <string name="auth_sign_up_email_exists_error_msg">An account with the given email address already exists.</string>
    <string name="auth_sign_up_password_empty_error_msg">Password required.</string>
    <string name="auth_sign_up_password_length_error_msg">Password should be at least 8 characters long.</string>

    <!-- AUTH LOG_IN -->

    <string name="auth_log_in_header">Log in</string>
    <string name="auth_log_in_email_hint">Email</string>
    <string name="auth_log_in_password_hint">Password</string>
    <string name="auth_log_in_account_recovery_text">Having trouble logging in? Get help here.</string>
    <string name="auth_log_in_email_invalid_error_msg">Invalid email.</string>
    <string name="auth_log_in_wrong_password_error_msg">Wrong password.</string>

    <!-- AUTH ACCOUNT_RECOVERY -->

    <string name="auth_account_recovery_header">Recover Your Account</string>
    <string name="auth_account_recovery_helper_text">Enter the email address that you used to register.
        We\'ll send you an email to recover your account.</string>
    <string name="auth_account_recovery_btn_text">Send</string>
    <string name="auth_account_recovery_error_msg">There is no user corresponding to the given email address.</string>
    <string name="auth_account_recovery_user_msg">Account Recovery email has been sent. Please check your email…</string>

    <!-- HOME -->

    <string name="iv_profile_icon_description">Icon opening ProfileActivity.</string>
    <string name="chart_list_layout_title">Recent top artists</string>
    <string name="chart_list_layout_subtitle">Check out who is on the top artists chart.</string>
    <string name="similar_artist_list_layout_title">Recommended for you</string>
    <string name="similar_artist_list_layout_subtitle">Inspired by your recent activity.</string>
    <string name="tag_top_artist_list_layout_title">Best of genre</string>
    <string name="tag_top_artist_list_layout_subtitle">Best artists of the genre you are interested in.</string>
    <string name="similar_artist_top_albums_layout_title">These may interest you</string>
    <string name="similar_artist_top_albums_layout_subtitle">Albums of the artist similar to one you checked recently.</string>
    <string name="encouraging_text_title">Give it a try</string>
    <string name="encouraging_text_subtitle">Start using the app to get more suggestions.</string>

    <!-- PROFILE -->

    <string name="profile_header">Profile info</string>
    <string name="profile_user_info">You are currently logged in as:</string>
    <string name="profile_collection_status_text">Amount of albums in your collection:</string>
    <string name="profile_wishlist_status_text">Amount of albums on your wishlist:</string>
    <string name="profile_log_out_button_text">Log out</string>

    <!-- SEARCH -->
    <string name="search_edit_text_hint">Search for your favourite artists</string>
    <string name="tag_list_label">Browse all genres</string>

    <!-- SEARCH RESULTS -->
    <string name="search_results_header">Search Results</string>

    <!-- ERROR MESSAGES / ERROR IMAGE DESCRIPTIONS-->

    <string name="error_message_no_internet_title">An error has occurred.</string>
    <string name="error_message_no_internet_artist_title">Artist data unavailable.</string>
    <string name="error_message_no_internet_album_title">Album data unavailable.</string>
    <string name="error_message_no_internet_search_results_title">Search results unavailable.</string>
    <string name="error_message_no_internet_subtitle">Please check your internet connection.</string>
    <string name="error_message_empty_collection_title">Your collection is still empty.</string>
    <string name="error_message_empty_wishlist_title">Your wishlist is still empty.</string>
    <string name="error_message_empty_list_subtitle">Get started by adding some albums to the list.</string>
    <string name="error_message_image_description">Error icon.</string>
    <string name="empty_search_toast_message">You cannot run an empty search.</string>

    <!-- ARTIST -->

    <string name="artist_top_albums_label">Top Albums</string>

    <!-- ALBUM -->

    <string name="album_track_list_label">Track List</string>
    <string name="fab_collection_add">Add to collection</string>
    <string name="fab_collection_remove">Remove from collection</string>
    <string name="fab_wishlist_add">Add to wishlist</string>
    <string name="fab_wishlist_remove">Remove from wishlist</string>

    <!-- WIDGET -->

    <string name="widget_empty_view_text">Albums on your wishlist:</string>
</resources>
