<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back_arrow" />

    <TextView
        android:id="@+id/tv_profile_main_header"
        style="@style/auth_main_header"
        android:text="@string/profile_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/tv_profile_user_info"
        style="@style/secondary_header"
        android:layout_marginStart="@dimen/big_margin"
        android:layout_marginTop="@dimen/huge_margin"
        android:text="@string/profile_user_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_main_header" />

    <TextView
        android:id="@+id/tv_profile_user_name"
        style="@style/profile_info"
        android:layout_marginTop="@dimen/tiny_margin"
        app:layout_constraintStart_toStartOf="@+id/tv_profile_user_info"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_user_info"
        tools:text="@string/user_name" />

    <TextView
        android:id="@+id/tv_profile_collection_status"
        style="@style/secondary_header"
        android:layout_marginTop="@dimen/normal_margin"
        android:text="@string/profile_collection_status_text"
        app:layout_constraintStart_toStartOf="@+id/tv_profile_user_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_user_name" />

    <TextView
        android:id="@+id/tv_profile_collection_album_amount"
        style="@style/profile_info"
        android:layout_marginTop="@dimen/tiny_margin"
        tools:text="@string/album_amount"
        app:layout_constraintStart_toStartOf="@+id/tv_profile_collection_status"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_collection_status" />

    <TextView
        android:id="@+id/tv_profile_wishlist_status"
        style="@style/secondary_header"
        android:layout_marginTop="@dimen/normal_margin"
        android:text="@string/profile_wishlist_status_text"
        app:layout_constraintStart_toStartOf="@+id/tv_profile_collection_album_amount"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_collection_album_amount" />

    <TextView
        android:id="@+id/tv_profile_wishlist_album_amount"
        style="@style/profile_info"
        android:layout_marginTop="@dimen/tiny_margin"
        tools:text="@string/album_amount"
        app:layout_constraintStart_toStartOf="@+id/tv_profile_wishlist_status"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_wishlist_status" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profile_log_out_btn"
        style="@style/auth_submit_btn"
        android:text="@string/profile_log_out_button_text"
        app:cornerRadius="@dimen/auth_btn_corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />


</androidx.constraintlayout.widget.ConstraintLayout>