<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.AccountRecoveryFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/auth_account_recovery_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back_arrow" />

    <TextView
        style="@style/auth_main_header"
        android:text="@string/auth_account_recovery_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <LinearLayout
        android:id="@+id/auth_log_in_input_data_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_margin"
            android:text="@string/auth_account_recovery_helper_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/auth_account_recovery_email_layout"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/auth_text_input_layout_error"
            style="@style/auth_text_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/auth_account_recovery_email_input"
                style="@style/auth_text_input_edit_text"
                android:hint="@string/auth_log_in_email_hint"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/auth_account_recovery_submit_btn"
        style="@style/auth_submit_btn"
        android:text="@string/auth_account_recovery_btn_text"
        app:cornerRadius="@dimen/auth_btn_corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

</androidx.constraintlayout.widget.ConstraintLayout>